<resources>
    <string name="app_name">MoneyLine</string>
    <string name="no_image">Image</string>
    <string name="Account">tài khoản</string>
    <string name="Cancel">thoát</string>
    <string name="SavingAccountTab">sổ tiết kiệm</string>
    <string name="MucChi">Mục chi</string>
    <string name="note">Chú thích</string>
    <string name="tai_khoan">Tài khoản</string>
    <string name="ngay">Ngày</string>
    <string name="chi_cho_ai">Chi cho ai</string>
    <string name="so_tien">số tiền</string>
    <string name="delete">Xóa</string>
    <string name="Lender">lender</string>
    <string name="Event">SoTien</string>
    <string name="Save">lưu lại</string>
    <string name="EditPayeeDialogHead">sửa mục chi</string>

    <string name="title_activity_control_thu_chi">ControlThuChiActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tai_khoan">TaiKhoan_Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="register">Register</string>
    <string name="HasAccount">HasAccount</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="present_language">present language</string>
    <string name="use_pass_code">Pass code</string>
    <string name="pass_code"> pass</string>
    <string name="change_pass_code">chang pass</string>
    <string name="setting">Settings</string>
    <string name="logout">Logout</string>
    <string name="link_account">Link account</string>
    <string name="SettingGroupUse">setting user</string>
    <string name="product_information">Đăng xuất</string>
    <string name="help">Help</string>
    <string name="Invite">Invite</string>
    <string name="send_feed_back">Send feedback</string>
    <string name="rate_app">Rate app</string>
    <string name="notification">Notification</string>
    <string name="setting_more">Setting more</string>
    <string name="reminder_input">Reminder input</string>
    <string name="Language">Language</string>
    <string name="setting_group_setup">setting group setup</string>
    <string name="currency_rate">Currency rate</string>
    <string name="Currency">Currency</string>
    <string name="SettingGroupCurrency">Setting group currency</string>
    <string name="ExportData">Export data</string>
    <string name="SyncData">Sync Data</string>
    <string name="Syncs">Sync</string>

    <string name="Categories">Categories</string>
    <string name="SettingGroupData">Setting group data</string>
    <string name="Recurring">Recurring</string>
    <string name="Shopping">Shopping</string>
    <string name="More">More</string>
    <string name="ItemGroup">Item group</string>
    <string name="NeedToBuy">Need to buy</string>
    <string name="Description">Diễn giải</string>
    <string name="ItemNameHint">Item name hint</string>
    <string name="Name">Name</string>
    <string name="Expenses">Expenses</string>
    <string name="WriteTransaction">Write Transaction</string>
    <string name="Ghi">Ghi</string>
    <string name="NewPassWord">New password</string>
    <string name="ConfirmPassWord">Confirm password</string>
    <string name="OldPassWord">Old password</string>
    <string name="ChangePassWord">Change password</string>
    <string name="SettingChangeUserName">Setting Change UserName</string>
    <string name="SettingChangeUserNameConfirmPassWord">confirm password</string>
    <string name="SettingNewUserNameHint">New UserName</string>
    <string name="SettingNewUserName">New UserName</string>
    <string name="ResetDataConfirm">Reset data confirm</string>
    <string name="ResetDataConfirmPasswordNote">Password note</string>
    <string name="AtTime">At Time</string>
    <string name="ReminderInputMessage">Reminder input message</string>
    <string name="Agree">Agree</string>
    <string name="Time">Time</string>
    <string name="Date">Ngày</string>
    <string name="current_time">Current time</string>
    <string name="Today">Today</string>
    <string name="ResetData">Reset data</string>
    <string name="SettingGetAllServerData">Get all server data</string>
    <string name="ContentDescriptionImageNull">Image null</string>
    <string name="SettingMoreTitle">Setting more</string>
    <string name="Sync" />
    <string name="settingMenuSendError">sent error</string>
    <string name="Key0">0</string>
    <string name="Key9">9</string>
    <string name="Key8">8</string>
    <string name="Key7">7</string>
    <string name="Key6">6</string>
    <string name="Key5">5</string>
    <string name="Key4">4</string>
    <string name="Key3">3</string>
    <string name="Key2">2</string>
    <string name="Key1">1</string>
    <string name="or">or</string>
    <string name="ForgotPassword">Forgot password</string>
    <string name="Login">Login</string>
    <string name="InputNewPassCode">Input new passcode</string>
    <string name="saving_from_account">Saving from account</string>
    <string name="saving_account">Saving to account</string>
    <string name="saving_maturity">Saving maturity</string>
    <string name="saving_interest_rate">Saving interest  rate</string>
    <string name="percent">Percent</string>
    <string name="saving_term_type">Saving term type</string>
    <string name="SavingEndDateSubmitted">End date submitted</string>
    <string name="SavingDateSubmitted">Date Submitted</string>
    <string name="Approximate">Approximate</string>
    <string name="CreditAccountHint">Credit Account</string>
    <string name="FirstAmount">First Amount</string>
    <string name="SavingBank">Bank</string>
    <string name="currency_type">Currency type</string>
    <string name="AccountCategory">Account Category</string>
    <string name="Note">Note</string>
    <string name="SavingInterestPayment">Interest Payment</string>
    <string name="LastSyncData">Last Sync data</string>
    <string name="WifiOnly">wifi only</string>
    <string name="SaveAndNew">Thêm mới</string>
    <string name="expense_from_borrow_title">Expense From borrow title</string>
    <string name="ExpenseForOrther">Chi cho ai</string>
    <string name="AccountFrom">Vào tài khoản</string>
    <string name="ExpenseFor">Chi cho</string>

        <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="Done">Done</string>
    <string name="frmIncomeDetail_Add">in come detail add</string>
    <string name="CategoriesExpensesName">Catagory Expenses Name</string>
    <string name="frmCatagoryExpensesHeader">Catagory Expenses</string>
    <string name="CatagoryExpensesParent">Catagory Expenses</string>
    <string name="Months">Months</string>
    <string name="SavingTermTypeOther">Type other</string>
    <string name="SavingTermTypeThreeWeek">Three Week</string>
    <string name="SavingTermTypeTwoWeek">Two week</string>
    <string name="SavingTermTypeOneWeek">One week</string>
    <string name="SavingTermTypeTwelveMonth">Twele Month</string>
    <string name="SavingTermTypeSixMonth">Six month</string>
    <string name="SavingTermTypeThreeMonth">Three month</string>
    <string name="SavingTermTypeOneMonth">One month</string>
    <string name="FromDate">From Date</string>
    <string name="SelectTrendReportTime">Trend report time</string>
    <string name="ToDate">To date</string>
    <string name="PercentExpense">Precent expense</string>
    <string name="TrendIncomeTotal">in come total</string>
    <string name="AveragrValue">Averagr value</string>
    <string name="SumExpense">Sum expense</string>
    <string name="EmptyReport">Empty report</string>
    <string name="TrendReportTime">Report time</string>
    <string name="ChoseAccount">Chose acount</string>
    <string name="TrendReportExpenseCategory">Report expense category</string>
    <string name="EditMoney">Edit money</string>
    <string name="categories_list">Category</string>
    <string name="save_language">Reset Now</string>
    <string name="hello_world">Hello world!</string>
    <string name="email">Email Id</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="CloseButton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="Register_Email">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="account">Account</string>
    <string name="tab_date">Date</string>
    <string name="tab_time">Time</string>
    <string name="select_note">danh sách thu chi</string>
    <string name="Chi">Chi</string>
    <string name="Thu">Thu</string>
    <string name="ChoVay">Cho vay</string>
    <string name="ToAccount">Vào tài khoản</string>
    <string name="MucThu">Mục thu</string>
    <string name="Money">Số tiền</string>
    <string name="NguoiVay">Người vay</string>
    <string name="PersonalEdit">Personal</string>
    <string name="textChi">Chi</string>
    <string name="SoTien">Số tiền</string>
    <string name="ThuTu">Thu Từ</string>
    <string name="TitleThu">Thu</string>
    <string name="TitleChi">Chi</string>
    <string name="categories">Category</string>
    <string name="GhiChu">Ghi chú</string>
    <string name="Type">Loại Tài Khoản</string>
    <string name="account_name">Tên Tài Khoản</string>
    <string name="first_money">Số tiền ban đầu</string>
    <string name="insert_account">Thêm tài khoản</string>
    <string name="type_account">Loại tài khoản</string>
    <string name="balance">Ví</string>
    <string name="account_atm">Thẻ ATM</string>
    <string name="bank_account">Tài Khoản Ngân Hàng</string>
    <string name="AccountTypeTicker4">Sổ Tiết Kiệm</string>
    <string name="AccountTypeTicker5">Khác</string>
    <string name="lnperiod">Kỳ Hạn</string>
    <string name="date_saving">Ngày gửi</string>
    <string name="tinterest">Lãi xuất</string>
    <string name="so_tien_gui">Số tiền gửi</string>
    <string name="ln24Month">24 Tháng</string>
    <string name="today">Hôm nay</string>
    <string name="title_dialog_date">Ngày</string>
    <string name="Edit">Sửa</string>
    <string name="payee">Vay</string>
    <string name="textChovay">Cho vay</string>
    <string name="phantram">%</string>
    <string name="email_invalid">Your Email Id is Invalid</string>
    <string name="internet">không có mạng.</string>
    <string name="input_pass_code">Input pass code</string>
    <string name="forget_password">Quên mật khẩu!</string>
    <string name="this_year">năm này</string>
    <string name="this_month">tháng này</string>
    <string name="this_week">tuần này</string>
    <string name="text_today">hôm nay</string>
    <string name="text_all">tất</string>
    <string name="all">Tất cả</string>
    <string name="text_thu">Thu</string>
    <string name="account_empty">Bạn chưa nhập tên tài khoản.</string>
    <string name="balance_empty">Bạn chưa nhập số tiền ban đầu</string>
    <string name="Sua">Sửa</string>
</resources>
